# kagent-embeddings

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PERFORMANCE.md  README.md  docker-compose.yaml
src/: main.rs
supply-chain/: config.toml
